fixed header spacing in the view task modal

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -732,8 +732,13 @@ button {
   display: flex;
 }
 
+.task-details > .header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .task-details > .header > .heading-L {
-  color: #000112;
+  color: var(--primaryText);
 }
 
 .task-details > .body-L {
